# task-planner

./: .gitignore  CMakeLists.txt  CONFIG.md  CONFIG_QUICK_REFERENCE.md  GETTING_STARTED.md  INSTALL.md  README.md  plan.conf  plan.conf.example
src/: .clang-format  Act.cpp  Act.h  Config.cpp  Config.h  TaskManager.cpp  TaskManager.h  UndoManager.cpp  UndoManager.h  main.cpp  main_demo.cpp
